deployment/optional/40-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: <app-name>-restrict-traffic
  labels:
    app: <app-name>
spec:
  podSelector:
    matchLabels:
      app: <app-name>
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector: {}
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
      ports:
        - protocol: TCP
          port: 8080
  egress: []
